--- a/src/Vista/GestionTrabajadores/GestionTrabajadores.fxml
+++ b/src/Vista/GestionTrabajadores/GestionTrabajadores.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="593.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.GestionTrabajadores.GestionTrabajadoresController">
    <children>
-      <TabPane prefHeight="540.0" prefWidth="593.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutY="-17.0" prefHeight="557.0" prefWidth="675.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="AÑADIR TRABAJADOR">
             <content>
@@ -21,12 +21,12 @@
                         <Label layoutX="79.0" layoutY="173.0" text="Puesto" />
                         <Label layoutX="79.0" layoutY="216.0" text="Dni / NIE" />
                         <Label layoutX="79.0" layoutY="263.0" text="Salario bruto anual" />
-                        <TextField layoutX="239.0" layoutY="79.0" />
-                        <TextField layoutX="239.0" layoutY="124.0" />
-                        <TextField layoutX="239.0" layoutY="169.0" />
-                        <TextField layoutX="239.0" layoutY="212.0" />
-                        <TextField layoutX="239.0" layoutY="259.0" />
-                        <TextField layoutX="239.0" layoutY="309.0" />
+                        <TextField fx:id="id" layoutX="239.0" layoutY="79.0" />
+                        <TextField fx:id="nombre" layoutX="239.0" layoutY="124.0" />
+                        <TextField fx:id="puesto" layoutX="239.0" layoutY="169.0" />
+                        <TextField fx:id="dni" layoutX="239.0" layoutY="212.0" />
+                        <TextField fx:id="salario" layoutX="239.0" layoutY="259.0" />
+                        <TextField fx:id="contraseña" layoutX="239.0" layoutY="309.0" />
                         <Label layoutX="201.0" layoutY="22.0" prefHeight="31.0" prefWidth="225.0" text="AÑADIR TRABAJADORES">
                            <font>
                               <Font size="17.0" />
@@ -39,26 +39,42 @@
           </Tab>
             <Tab text="MODIFICAR TRABAJADOR">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="265.0" prefWidth="308.0">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="559.0" prefWidth="645.0">
                      <children>
-                        <Label layoutX="79.0" layoutY="313.0" text="Contraseña" />
-                        <Label layoutX="80.0" layoutY="83.0" text="Id Trabajador" />
-                        <Label layoutX="79.0" layoutY="128.0" text="Nombre" />
-                        <Label layoutX="79.0" layoutY="173.0" text="Puesto" />
-                        <Label layoutX="79.0" layoutY="216.0" text="Dni / NIE" />
-                        <Label layoutX="79.0" layoutY="263.0" text="Salario bruto anual" />
-                        <TextField layoutX="239.0" layoutY="79.0" />
-                        <TextField layoutX="239.0" layoutY="124.0" />
-                        <TextField layoutX="239.0" layoutY="169.0" />
-                        <TextField layoutX="239.0" layoutY="212.0" />
-                        <TextField layoutX="239.0" layoutY="259.0" />
-                        <TextField layoutX="239.0" layoutY="309.0" />
-                        <Label layoutX="201.0" layoutY="22.0" prefHeight="31.0" prefWidth="225.0" text="AÑADIR TRABAJADORES">
+                        <Label layoutX="78.0" layoutY="157.0" text="Id Trabajador" />
+                        <TextField fx:id="idModif" layoutX="237.0" layoutY="153.0" />
+                        <Label layoutX="203.0" layoutY="32.0" prefHeight="31.0" prefWidth="241.0" text="MODIFICAR TRABAJADORES">
                            <font>
-                              <Font size="17.0" />
+                              <Font size="19.0" />
                            </font>
                         </Label>
-                        <Button fx:id="añadirTrabajor1" layoutX="379.0" layoutY="411.0" mnemonicParsing="false" onAction="#añadirTrabajador" text="AÑADIR TRABAJADOR" />
+                        <Button fx:id="modificarTrabajador" layoutX="379.0" layoutY="411.0" mnemonicParsing="false" onAction="#modificarTrabajador" text="MODIFICAR TRABAJADOR" />
+                        <Label layoutX="78.0" layoutY="89.0" text="Introduce el id del trabajador que quieres modificar">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab text="ELIMINAR TRABAJADOR">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="265.0" prefWidth="308.0">
+                     <children>
+                        <Label layoutX="80.0" layoutY="139.0" text="Id Trabajador" />
+                        <TextField fx:id="idEliminar" layoutX="242.0" layoutY="135.0" />
+                        <Label layoutX="201.0" layoutY="22.0" prefHeight="31.0" prefWidth="225.0" text="ELIMINAR TRABAJADORES">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="eliminarTrabajador" layoutX="379.0" layoutY="411.0" mnemonicParsing="false" onAction="#eliminarTrabajador" text="ELIMINAR TRABAJADOR" />
+                        <Label layoutX="80.0" layoutY="92.0" text="Introduce el id del trabajador el cual quieres eliminar">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
                </content>
