--- a/src/Vista/rutas/Rutas.fxml
+++ b/src/Vista/rutas/Rutas.fxml
@@ -6,18 +6,59 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.rutas.RutasController">
+<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.rutas.RutasController">
    <children>
-      <TextField fx:id="id" layoutX="239.0" layoutY="54.0" />
-      <Label fx:id="idRuta" layoutX="155.0" layoutY="58.0" text="IdRuta" />
-      <Label layoutX="154.0" layoutY="105.0" text="Kilometros" />
-      <Label layoutX="154.0" layoutY="149.0" text="Trabajador" />
-      <Label layoutX="154.0" layoutY="192.0" text="Minutos" />
-      <TextField fx:id="kilometros" layoutX="239.0" layoutY="101.0" />
-      <TextField fx:id="trabajador" layoutX="239.0" layoutY="145.0" />
-      <TextField fx:id="minutos" layoutX="239.0" layoutY="188.0" />
-      <TextField fx:id="gastos" layoutX="239.0" layoutY="234.0" />
-      <Label layoutX="154.0" layoutY="238.0" text="Gastos" />
-      <Button fx:id="insertar" layoutX="466.0" layoutY="326.0" mnemonicParsing="false" onMouseClicked="#clicarinsertarRuta" text="Insertar Ruta" />
+      <TabPane prefHeight="550.0" prefWidth="601.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="INSERTAR RUTA">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TextField fx:id="id" layoutX="237.0" layoutY="58.0" />
+                        <Label fx:id="idRuta" layoutX="128.0" layoutY="62.0" text="IdRuta" />
+                        <Label layoutX="117.0" layoutY="133.0" text="Kilometros" />
+                        <Label layoutX="124.0" layoutY="199.0" text="Minutos" />
+                        <TextField fx:id="kilometros" layoutX="237.0" layoutY="129.0" />
+                        <TextField fx:id="minutos" layoutX="237.0" layoutY="195.0" />
+                        <TextField fx:id="gastos" layoutX="237.0" layoutY="268.0" />
+                        <Label layoutX="128.0" layoutY="272.0" text="Gastos" />
+                        <Button fx:id="insertar" layoutX="490.0" layoutY="316.0" mnemonicParsing="false" onMouseClicked="#clicarinsertarRuta" text="Insertar Ruta" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="MODIFICAR RUTA">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+            <Tab text="BORRAR RUTA">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="108.0" layoutY="131.0" text="Id Ruta" />
+                        <TextField fx:id="ruta" layoutX="209.0" layoutY="127.0" />
+                        <Button fx:id="borrarRuta" layoutX="470.0" layoutY="447.0" mnemonicParsing="false" onMouseClicked="#clicarBorrar" text="Borrar Ruta" />
+                     </children></AnchorPane>
+               </content>
+            </Tab>
+            <Tab onSelectionChanged="#clicarInformacionRuta" text="INFORMACION RUTA">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="table" layoutX="73.0" layoutY="128.0" prefHeight="335.0" prefWidth="450.0">
+                          <columns>
+                            <TableColumn fx:id="rutaColum" prefWidth="99.0" text="Id Ruta" />
+                            <TableColumn fx:id="kilometrosColum" prefWidth="107.0" text="Kilometros" />
+                              <TableColumn fx:id="minutosColum" prefWidth="122.0" text="Minutos" />
+                              <TableColumn fx:id="gastosColum" prefWidth="121.0" text="Gastos" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
