--- a/src/Vista/GestionTrabajadores/GestionTrabajadores.fxml
+++ b/src/Vista/GestionTrabajadores/GestionTrabajadores.fxml
@@ -32,7 +32,11 @@
                               <Font size="17.0" />
                            </font>
                         </Label>
-                        <Button fx:id="añadirTrabajor" layoutX="379.0" layoutY="411.0" mnemonicParsing="false" onAction="#añadirTrabajador" text="AÑADIR TRABAJADOR" />
+                        <Button fx:id="añadirTrabajor" layoutX="474.0" layoutY="444.0" mnemonicParsing="false" onAction="#añadirTrabajador" text="AÑADIR TRABAJADOR" />
+                        <TextField fx:id="idHorario" layoutX="239.0" layoutY="399.0" />
+                        <TextField fx:id="idTienda" layoutX="239.0" layoutY="353.0" />
+                        <Label layoutX="79.0" layoutY="403.0" text="Id Horario" />
+                        <Label layoutX="79.0" layoutY="357.0" text="Id Tienda" />
                      </children>
                   </AnchorPane>
             </content>
@@ -41,19 +45,34 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="559.0" prefWidth="645.0">
                      <children>
-                        <Label layoutX="78.0" layoutY="157.0" text="Id Trabajador" />
-                        <TextField fx:id="idModif" layoutX="237.0" layoutY="153.0" />
-                        <Label layoutX="203.0" layoutY="32.0" prefHeight="31.0" prefWidth="241.0" text="MODIFICAR TRABAJADORES">
+                        <Label layoutX="76.0" layoutY="110.0" text="Id Trabajador" />
+                        <TextField fx:id="idModif" layoutX="237.0" layoutY="106.0" />
+                        <Label layoutX="217.0" layoutY="26.0" prefHeight="31.0" prefWidth="241.0" text="MODIFICAR TRABAJADORES">
                            <font>
                               <Font size="19.0" />
                            </font>
                         </Label>
-                        <Button fx:id="modificarTrabajador" layoutX="379.0" layoutY="411.0" mnemonicParsing="false" onAction="#modificarTrabajador" text="MODIFICAR TRABAJADOR" />
-                        <Label layoutX="78.0" layoutY="89.0" text="Introduce el id del trabajador que quieres modificar">
+                        <Button fx:id="modificarTrabajador" layoutX="442.0" layoutY="449.0" mnemonicParsing="false" onAction="#modificarTrabajador" text="MODIFICAR TRABAJADOR" />
+                        <Label layoutX="78.0" layoutY="63.0" text="Introduce el id del trabajador que quieres modificar">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </Label>
+                        <TextField fx:id="contraseñaModif" layoutX="237.0" layoutY="345.0" />
+                        <TextField fx:id="salarioModif" layoutX="237.0" layoutY="303.0" />
+                        <TextField fx:id="puestoModif" layoutX="237.0" layoutY="264.0" />
+                        <TextField fx:id="nombreModif" layoutX="237.0" layoutY="183.0" />
+                        <Label layoutX="78.0" layoutY="307.0" text="Salario bruto anual" />
+                        <Label layoutX="73.0" layoutY="264.0" prefHeight="25.0" prefWidth="36.0" text="Puesto" />
+                        <Label layoutX="75.0" layoutY="187.0" text="Nombre" />
+                        <Label layoutX="73.0" layoutY="349.0" text="Contraseña" />
+                        <Label layoutX="75.0" layoutY="148.0" prefHeight="17.0" prefWidth="367.0" text="Introduce los cambios que deseas hacer" />
+                        <TextField fx:id="dniModif" layoutX="237.0" layoutY="224.0" />
+                        <Label layoutX="73.0" layoutY="228.0" text="Dni / NIE" />
+                        <Label layoutX="73.0" layoutY="387.0" text="Id Tienda" />
+                        <Label layoutX="73.0" layoutY="421.0" text="Id Horario" />
+                        <TextField fx:id="idTiendaModif" layoutX="237.0" layoutY="383.0" />
+                        <TextField fx:id="idHorarioModif" layoutX="237.0" layoutY="417.0" />
                      </children>
                   </AnchorPane>
                </content>
@@ -83,14 +102,16 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="tableView" layoutX="45.0" layoutY="79.0" prefHeight="395.0" prefWidth="507.0">
+                        <TableView fx:id="tableView" layoutX="38.0" layoutY="79.0" prefHeight="395.0" prefWidth="618.0">
                           <columns>
-                            <TableColumn fx:id="idColum" prefWidth="75.0" text="Id trabajador" />
-                            <TableColumn fx:id="nombreColum" prefWidth="75.0" text="Nombre" />
+                            <TableColumn fx:id="idColum" prefWidth="63.0" text="Id trabajador" />
+                            <TableColumn fx:id="nombreColum" prefWidth="87.0" text="Nombre" />
                               <TableColumn fx:id="puestoColum" prefWidth="89.0" text="Puesto" />
                               <TableColumn fx:id="dniColum" prefWidth="86.0" text="DNI" />
                               <TableColumn fx:id="salarioColum" prefWidth="74.0" text="Salario" />
                               <TableColumn fx:id="ContraseñaColum" prefWidth="107.0" text="Contraseña" />
+                              <TableColumn fx:id="idTiendaColum" prefWidth="58.0" text="idTienda" />
+                              <TableColumn fx:id="idHorarioColum" prefWidth="53.0" text="idHorario" />
                           </columns>
                         </TableView>
                         <Label layoutX="153.0" layoutY="24.0" prefHeight="31.0" prefWidth="292.0" text="INFORMACION DE  TRABAJADORES">
